# f5e

./: .gitignore  .mcp.json  AI.md  README.md  install.sh  opencode.json  pyproject.toml
.claude/: settings.json
.claude/skills/kotak-export/: SKILL.md
.claude/skills/plaid-export/: SKILL.md
.claude/skills/zerodha-export/: SKILL.md
.opencode/commands/: kotak-export.md  zerodha-export.md
db/: schema.sql
f5e/: db.py
f5e/analyze/: fifo_pnl.py  networth.py
f5e/export/: cmc.py  crypto_refresh.py  plaid.py  vehicle.py
f5e/ingest/: assets.py  kotak.py  plaid.py  zerodha.py  zerodha_holdings.py
tests/: conftest.py  test_db.py  test_install.py
tests/analyze/: test_fifo_pnl.py
tests/export/: test_cmc.py  test_crypto_refresh.py  test_plaid.py  test_vehicle.py
tests/fixtures/: asset_snapshots_sample.json  crypto_holdings_sample.json  kotak_statement_multiline_sample.txt  kotak_statement_sample.txt  plaid_holdings_sample.json  plaid_investment_transactions_sample.json  plaid_transactions_sample.json  vehicles_sample.json  zerodha_holdings_sample.json  zerodha_trades_sample.json
tests/ingest/: test_assets.py  test_kotak.py  test_plaid.py  test_zerodha.py  test_zerodha_holdings.py
