[project]
name = "f5e"
version = "0.1.0"
description = "Personal finance ingestion + analytics across Indian + US accounts"
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.11,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=f5e --cov-report=term-missing"

[tool.coverage.run]
source = ["f5e"]
omit = ["f5e/__init__.py"]
